# uhs_graphics

./: .gitignore  LICENSE  setup.cfg
uhs-graphics/: __init__.py
uhs-graphics/dim2/: __init__.py  _object.py  _scene.py  _vector.py
uhs-graphics/dim2/objects/: __init__.py  _square.py
uhs_graphics/: __init__.py  _object.py  _scene.py  _vector.py  color.py
uhs_graphics/dim2/: __init__.py  _object.py  _scene.py  _vector.py  color.py
uhs_graphics/dim2/objects/: _square.py
uhs_graphics/objects/: __init__.py  _circle.py  _ellipse.py  _square.py
