[metadata]
name = uhs-graphics
version = 0.0.1
author = Quincy Nash
author_email = quincy.nash@icloud.com
description = A 2D and 3D graphics library for use combined with ___
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = GITHUB REPOSITORY LINK
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
